--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "aws-amplify": "^4.3.26",
+    "axios": "^0.27.2",
     "chart.js": "^3.8.0",
     "maplibre-gl": "^1.15.3",
     "maplibre-gl-js-amplify": "^1.6.0",
