map view is added in welcome page

--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "aws-amplify": "^4.3.26",
     "axios": "^0.27.2",
     "chart.js": "^3.8.0",
+    "leaflet": "^1.8.0",
     "maplibre-gl": "^1.15.3",
     "maplibre-gl-js-amplify": "^1.6.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^4.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.0.0",
     "react-phone-number-input": "^3.2.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
